--- a/Lenos-Frontend/assets/css/style.scss
+++ b/Lenos-Frontend/assets/css/style.scss
@@ -3,6 +3,8 @@
 @import '_shop.scss';
 @import '_contacts.scss';
 @import '_wishlist.scss';
+@import '_login.scss';
+@import '_register.scss';
 
 // Scrollbar Option start
 html{
