--- a/Lenos-Frontend/assets/css/style.scss
+++ b/Lenos-Frontend/assets/css/style.scss
@@ -5,6 +5,17 @@
 @import '_wishlist.scss';
 @import '_login.scss';
 @import '_register.scss';
+@import '_product-details.scss';
+
+#header{
+    opacity: 0;
+}
+#main{
+    opacity: 0;
+}
+#footer{
+    opacity: 0;
+}
 
 // Scrollbar Option start
 html{
@@ -31,6 +42,7 @@ html{
 
 // Scroll Top Button start
 .scroll-top{
+    cursor: pointer;
     position: fixed;
     bottom: 20px;
     right: 0;
@@ -1237,3 +1249,30 @@ footer{
     }
 }
 // Minicart basket end
+
+.blockOverlay{
+    background-color: #fff !important;
+}
+.blockMsg {
+    border: 0px !important;
+}
+#input-gif {
+	width: 100%;	
+	margin-top: auto;
+	margin-bottom: auto;
+	height: 400px;
+	margin-right: auto;
+	margin-left: auto;
+	position: absolute;
+	top: 50%;
+    transform: translateY(-40%);
+}
+
+#icorta {
+	height: 400px;
+	width: 450px;
+    margin: auto;
+    .logo{
+        width: 100%;
+    }
+}
